# spark_docker_sample

./: Dockerfile  Makefile  README.md  docker-compose copy.yml  docker-compose.yml  pyproject.toml  run_app.sh
data/extract/2023/04/12/: Kentucky_2023-04-12.json  Massachusetts_2023-04-12.json  Pennsylvania_2023-04-12.json  Sonnenland_2023-04-12.json  Vay_2023-04-12.json  Vertou_2023-04-12.json  Virginia_2023-04-12.json  Vue_2023-04-12.json  londres_2023-04-12.json
data/extract/2023/05/21/: Kentucky_2023-05-21.json  Massachusetts_2023-05-21.json  Pennsylvania_2023-05-21.json  Sonnenland_2023-05-21.json  Vay_2023-05-21.json  Vertou_2023-05-21.json  Virginia_2023-05-21.json  Vue_2023-05-21.json  londres_2023-05-21.json
data/output/HIGHEST_TEMPERATURE_BY_CITY_MONTH_PATH/Kentucky/2023/04/: .part-00000-6f689b75-05e2-49a4-b78d-9f0832fdf01d-c000.snappy.parquet.crc  part-00000-6f689b75-05e2-49a4-b78d-9f0832fdf01d-c000.snappy.parquet
data/saida.csv/: .part-00000-f2813a56-25d7-4719-804e-5e9362b4a14f-c000.csv.crc  .part-00001-f2813a56-25d7-4719-804e-5e9362b4a14f-c000.csv.crc  part-00000-f2813a56-25d7-4719-804e-5e9362b4a14f-c000.csv  part-00001-f2813a56-25d7-4719-804e-5e9362b4a14f-c000.csv
docs/: notes.txt
resources/: api_env.txt  city_list.json
spark_docker_sample/: meucodigo.py
spark_docker_sample/openweathermap_api/: city_list.py  openweathermap_api.py
spark_docker_sample/transform/: teste_uuid.py  transform_weather.py
tests/: test_wheather_calculation.py
(+34 files in other folders)
