[tool.poetry]
name = "spark-docker-sample"
version = "0.1.0"
description = ""
authors = ["Tiago <example@someemail.com.br>"]
readme = "README.md"
packages = [{include = "spark_docker_sample"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.2"
requests = "^2.28.2"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
